--- a/css/style.css
+++ b/css/style.css
@@ -211,36 +211,21 @@ h1, h2, h3, h4, h5, h6 {
   padding-top: 30px;
   text-align: center;
   width: 100%;
-  height: 530px;
+  height: 700px;
 }
 
 #intro .product-screens img {
-  box-shadow: 0px -2px 19px 4px rgba(0, 0, 0, 0.29);
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.29);
 }
 
-#intro .product-screens .product-screen-1 {
-  position: absolute;
-  z-index: 30;
-  left: calc(50% + 54px);
-  bottom: 0;
-  height: 500px;
-}
 
 #intro .product-screens .product-screen-2 {
   position: absolute;
-  z-index: 20;
-  left: calc(50% - 154px);
-  bottom: 0;
-  height: 430px;
+  left: calc(50% - 500px);
+  bottom: 500;
+  height: 2000px;
 }
 
-#intro .product-screens .product-screen-3 {
-  position: absolute;
-  z-index: 10;
-  left: calc(50% - 374px);
-  bottom: 0;
-  height: 360px;
-}
 
 @media (max-height: 768px) {
   #intro .product-screens {
@@ -1244,4 +1229,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #footer .footer-links a:hover {
   color: #1dc8cd;
+}
+
+.redheart {
+  color:#ff0000; font-size:14px;
 }
