--- a/css/style.css
+++ b/css/style.css
@@ -215,15 +215,33 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #intro .product-screens img {
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.29);
+  box-shadow: 0px -2px 19px 4px rgba(0, 0, 0, 0.29);
 }
 
+#intro .product-screens .product-screen-3 {
+  zindex:30;
+}
 
+#intro .product-screens .product-screen-1 {
+  position: absolute;
+  z-index: 30;
+  left: calc(50% + 54px);
+  bottom: 0;
+  height: 2000px;
+}
 #intro .product-screens .product-screen-2 {
   position: absolute;
-  left: calc(50% - 500px);
-  bottom: 500;
+  z-index: 20;
+  left: calc(50% - 154px);
+  bottom: 0;
   height: 2000px;
+}
+#intro .product-screens .product-screen-3 {
+  position: absolute;
+  z-index: 10;
+  left: calc(50% - 347px);
+  bottom: 0;
+  height: 360px;
 }
 
 
@@ -265,6 +283,7 @@ h1, h2, h3, h4, h5, h6 {
     display: none;
   }
 }
+
 
 /*--------------------------------------------------------------
 # Navigation Menu
